# BUCT_Vision

./: .gitignore  QOS_CONFIGURATION.md  README.md  build_clean.sh  rm-vision.service  serial_basic.py  start_vision_pro.sh  start_vision_python.sh
calibrationdata/: ost.txt  ost.yaml
calibrationdata (1)/: ost.txt  ost.yaml
src/mvcc_camera_ros2/: CMakeLists.txt  README.md  package.xml
src/mvcc_camera_ros2/common/: camera_parameter_service_manager.h  hik_camera.h
src/mvcc_camera_ros2/config/: hik_camera_config.yaml
src/mvcc_camera_ros2/launch/: connect_by_config.xml  hik_camera.launch.py
src/mvcc_camera_ros2/src/: camera_parameter_service_manager.cpp  camera_params_test.cpp  create_camera_image_pub.cpp  create_camera_image_sub.cpp  hik_camera.cpp
src/mvcc_camera_ros2_interface/: CMakeLists.txt  package.xml
src/mvcc_camera_ros2_interface/msg/: ChunkDataContent.msg  FrameInfo.msg
src/mvcc_camera_ros2_interface/srv/: ExecuteCommand.srv  GetBoolValue.srv  GetEnumValue.srv  GetFloatValue.srv  GetIntegerValue.srv  GetStringValue.srv  SetBoolValue.srv  SetEnumValue.srv  SetFloatValue.srv  SetIntegerValue.srv  SetStringValue.srv
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: GimbalCmd.msg  Target.msg
src/rm_serial/: README.md  package.xml  setup.py
src/rm_serial/config/: serial_params.yaml
src/rm_serial/launch/: serial.launch.py
src/rm_serial/rm_serial/: serial_node.py
src/rm_vision/: README.md  package.xml  setup.cfg  setup.py
src/rm_vision/config/: camera_params.yaml  detector_params.yaml
src/rm_vision/launch/: vision.launch.py
src/rm_vision/rm_vision/: detector_node.py  video_node.py
src/rm_vision_cpp/: CMakeLists.txt  Readme.md  package.xml
src/rm_vision_cpp/config/: camera_params.yaml  detector_params.yaml
src/rm_vision_cpp/include/rm_vision_cpp/: detector_node.hpp  trt_yolo.hpp  video_node.hpp
src/rm_vision_cpp/launch/: vision_cpp.launch.py
src/rm_vision_cpp/src/: detector_node.cpp  trt_yolo.cpp  video_node.cpp
